Boot 3.x best practice. Update Unit tests with SpringJunitConfig Apply text blocks where appropriate.